# i2a2_agent_final_project

./: .env.example  .gitignore  =0.25.0  AGENT_ARCHITECTURE_SUMMARY.md  AGENT_DATABASE_QUERIES.md  AGENT_SETUP.md  CHART_DISPLAY_FIX.md  CHART_EXPORT_IMPLEMENTATION_COMPLETE.md  CHART_EXPORT_QUICK_REFERENCE.md  CLASSIFICATION_INTEGRATION.md  DELIVERY.md  EXECUTIVE_SUMMARY.md  FEATURE_GAP_ANALYSIS.md  FIX_CHART_DISPLAY.md  FIX_DAYS_BACK_DEFAULT.md  FIX_YEAR_FILTERING.md  IMPLEMENTATION_SUMMARY.md  OPERATION_TYPE_FILTER.md  QUESTION_EXAMPLES.md  QUICKSTART.md  README.md  README_CHART_FIX.md  REPORT_DOWNLOAD_FIX_SUMMARY.md  SCRIPTS_AND_SETUP.md  SESSION_2_SUMMARY.md  SESSION_FINAL_CHART_FIX.md  SESSION_SUMMARY.md  SESSION_SUMMARY_CLOUD_MIGRATION.md  SESSION_SUMMARY_OCT30_2025.md  SQLITE_INTEGRATION.md  STATUS.md  STREAMLIT_CLOUD_MIGRATION.md  TESTING_GUIDE.md  TEST_CHARTS_INSTRUCTIONS.md  VALIDATION_ANALYSIS_FEATURE.md  VISUAL_BEFORE_AFTER.md  analyze_docs.py  manage_project.sh  perguntas_exemplo.md  pyproject.toml  (+13 more)
.streamlit/: config.toml  secrets.toml.example
Projeto Final - Artefatos/: I2A2_Agentes_Inteligentes_Projeto_Final_SEM_NOME_III.docx  I2A2_Agentes_Inteligentes_Projeto_Final_SEM_NOME_III.pptx
docs/: AGENT_ARCHITECTURE.md  AGENT_CAPABILITY_AUDIT.md  AGENT_COMMUNICATION.md  AGENT_VERIFICATION.md  ARMAZENAMENTO_E_PERSISTENCIA.md  CHART_EXPORT.md  CHART_EXPORT_CLOUD_REFACTORING.md  CHART_EXPORT_USER_GUIDE.md  CHAT_COMMAND_GUIDE.md  CLASSIFICATION.md  CTE_MDFE_COMPLETE.md  CTE_MDFE_IMPLEMENTATION.md  CTE_MDFE_VALIDATIONS.md  DATABASE.md  DATABASE_OPTIMIZATIONS.md  (+27 more)
(+87 files in other folders)
